Bug 1060643 - Give content the opportunity to block chrome keyhandlers. r=smaug

If the content called preventDefault on a keyDown event then our default
system keyPress event handlers (e.g. the find-in-page search bar) should
not be wired to the PuppetWidget.

--HG--
extra : rebase_source : fc3347de8d7c5d280ac1a1e833153bb8e3ce451d